--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
-          xmlns:tools="http://schemas.android.com/tools" package="com.rm.cfv">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.rm.cfv">
 
     <dist:module dist:instant="true"/>
 
@@ -14,11 +15,13 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name="br.com.rm.cfv.activities.cliente.CadastrarClienteActivity"
+        <activity android:name="br.com.rm.cfv.activities.departamento.DepartamentoActivity"
                   android:theme="@style/AppTheme.NoActionBar">
         </activity>
-
+        <activity
+                android:name="br.com.rm.cfv.activities.cliente.CadastrarClienteActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
                 android:name="br.com.rm.cfv.activities.cliente.ListaClientesActivity"
                 android:label="@string/app_name"
@@ -29,7 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
