--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,22 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="br.com.rm.cfv.activities.departamento.DepartamentoActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name="br.com.rm.cfv.activities.cliente.ListaClientesActivity" android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name="br.com.rm.cfv.activities.departamento.DepartamentoActivity"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name="br.com.rm.cfv.activities.cliente.CadastrarClienteActivity"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name="br.com.rm.cfv.activities.cliente.ListaClientesActivity"
+                android:name="br.com.rm.cfv.activities.produto.CadastrarProdutoActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name="br.com.rm.cfv.activities.produto.ListaProdutosActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
