Finalizar Registro de Débito

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,13 @@
         </activity>
         <activity
                 android:name=".activities.cliente.ListaClientesActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
+                android:label="@string/app_name"
+                android:theme="@style/splashScreenTheme" android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
                 android:name=".activities.departamento.DepartamentoActivity"
@@ -46,16 +52,13 @@
         </activity>
         <activity
                 android:name=".activities.cliente.RegistrarDebitoActivity"
-                android:label="@string/app_name"
-                android:theme="@style/splashScreenTheme" android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
         </activity>
 
-
+        <activity
+                android:name=".activities.cliente.ListaDebitosClienteActivity"
+                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
+        </activity>
 
         <provider
                 android:name="androidx.core.content.FileProvider"
