--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:dist="http://schemas.android.com/apk/distribution"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="br.com.rm.cfv">
+        xmlns:dist="http://schemas.android.com/apk/distribution"
+        xmlns:tools="http://schemas.android.com/tools"
+        package="br.com.rm.cfv">
 
-    <dist:module dist:instant="true"/>
+    <dist:module dist:instant="true" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
             android:name=".CfvApplication"
@@ -19,46 +19,49 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".activities.produto.ListaProdutosActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-
+        <activity
+                android:name=".activities.cliente.VisualizarDebitoActivity"
+                android:label="@string/title_activity_visualizar_debito"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+                android:name=".activities.produto.ListaProdutosActivity"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.estoque.ListaEstoqueActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".activities.cliente.ListaClientesActivity"
                 android:label="@string/app_name"
-                android:theme="@style/splashScreenTheme" android:screenOrientation="portrait">
+                android:screenOrientation="portrait"
+                android:theme="@style/splashScreenTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
                 android:name=".activities.departamento.DepartamentoActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".activities.cliente.CadastrarClienteActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".activities.produto.CadastrarProdutoActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".activities.cliente.RegistrarDebitoActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
-        </activity>
-
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".activities.cliente.ListaDebitosClienteActivity"
-                android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
-        </activity>
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <provider
                 android:name="androidx.core.content.FileProvider"
@@ -67,9 +70,8 @@
                 android:grantUriPermissions="true">
             <meta-data
                     android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths"/>
+                    android:resource="@xml/file_paths" />
         </provider>
-
     </application>
 
 </manifest>
