--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation("com.google.guava:guava:28.1-android")
 
     // Required -- JUnit 4 framework
     implementation 'com.google.android.material:material:1.0.0'
