--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.cliente.debito.DetalheParcelaDebitoActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+                android:name=".activities.VisualizarImagemActivity"
+                android:label="@string/imagem_expandida_title"
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.cliente.debito.VisualizarDebitoActivity"
                 android:label="@string/title_activity_visualizar_debito"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.produto.ListaProdutosActivity"
                 android:screenOrientation="portrait"
@@ -30,7 +35,7 @@
         <activity
                 android:name=".activities.estoque.ListaEstoqueActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.cliente.ListaClientesActivity"
                 android:label="@string/app_name"
@@ -45,23 +50,24 @@
         <activity
                 android:name=".activities.departamento.DepartamentoActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.cliente.CadastrarClienteActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.produto.CadastrarProdutoActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:windowSoftInputMode="adjustPan" />
         <activity
                 android:name=".activities.cliente.debito.RegistrarDebitoActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.cliente.debito.ListaDebitosClienteActivity"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
                 android:name="androidx.core.content.FileProvider"
