--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation("com.google.guava:guava:28.1-android")
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     // Required -- JUnit 4 framework
     implementation 'com.google.android.material:material:1.0.0'
