--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activities.ChartsActivity"
                 android:label="@string/charts"
+                android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+                android:name=".activities.DashboardActivity"
+                android:label="@string/dashboard"
                 android:theme="@style/splashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,8 +63,7 @@
                 android:name=".activities.cliente.ListaClientesActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+                android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
                 android:name=".activities.fornecedor.ListaFornecedorActivity"
                 android:screenOrientation="portrait"
