--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 android:theme="@style/AppTheme.NoActionBar"/>
         <activity
                 android:name=".activities.DashboardActivity"
-                android:label="@string/dashboard"
+                android:label="@string/app_name"
                 android:theme="@style/splashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
