--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.ChartsActivity"
+        <activity
+                android:name=".activities.ChartsActivity"
                 android:label="@string/charts"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.DashboardActivity"
                 android:label="@string/app_name"
@@ -63,7 +64,7 @@
                 android:name=".activities.cliente.ListaClientesActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.fornecedor.ListaFornecedorActivity"
                 android:screenOrientation="portrait"
