--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "br.com.rm.cfv"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation("com.google.guava:guava:28.1-android")
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
+
 
     // Required -- JUnit 4 framework
     implementation 'com.google.android.material:material:1.0.0'
