--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,7 @@
         <activity
                 android:name=".activities.contaPagarReceber.compra_venda_produtos.RegistrarCompraVendaActivity"
                 android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".activities.contaPagarReceber.ListaContasPagarReceberActivity"
