--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    compileSdkVersion = 30
+    targetCompatibility = kotlin_version
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 
 buildscript {
