--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:dist="http://schemas.android.com/apk/distribution"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="br.com.rm.cfv">
+    xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="br.com.rm.cfv">
 
     <dist:module dist:instant="true" />
 
@@ -11,23 +11,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-            android:name=".CfvApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher_foreground"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".activities.receita.CadastrarReceitaDespesaActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar" />
-
+        android:name=".CfvApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher_foreground"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.reports.ReportsActivity"></activity>
         <activity
-                android:name=".activities.ChartsActivity"
-                android:label="@string/app_name"
-                android:theme="@style/splashScreenTheme">
+            android:name=".activities.receita.CadastrarReceitaDespesaActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.dashboard.DashboardActivity"
+            android:label="@string/app_name"
+            android:theme="@style/splashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,84 +35,84 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".activities.configuracao.ConfiguracoesActivity"
-                android:label="@string/configuracoes"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.configuracao.ConfiguracoesActivity"
+            android:label="@string/configuracoes"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.balancete.BalanceteActivity"
-                android:label="@string/title_activity_balancete"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.balancete.BalanceteActivity"
+            android:label="@string/title_activity_balancete"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.contaPagarReceber.contaPagarReceberViewer.detalhe.DetalheParcelaActivity"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.contaPagarReceber.contaPagarReceberViewer.detalhe.DetalheParcelaActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.VisualizarImagemActivity"
-                android:label="@string/imagem_expandida_title"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.VisualizarImagemActivity"
+            android:label="@string/imagem_expandida_title"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.contaPagarReceber.VisualizarContaPagarReceberActivity"
-                android:label="@string/title_activity_visualizar_debito"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.contaPagarReceber.VisualizarContaPagarReceberActivity"
+            android:label="@string/title_activity_visualizar_debito"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.produto.ListaProdutosActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.produto.ListaProdutosActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.estoque.ListaEstoqueActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.estoque.ListaEstoqueActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.cliente.ListaClientesActivity"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.cliente.ListaClientesActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.fornecedor.ListaFornecedorActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.fornecedor.ListaFornecedorActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.fornecedor.CadastrarFornecedorActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.fornecedor.CadastrarFornecedorActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.balancete.ListaBalanceteActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.balancete.ListaBalanceteActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.balancete.BalanceteTipoFragment"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.balancete.BalanceteTipoFragment"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.departamento.DepartamentoActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.departamento.DepartamentoActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.cliente.CadastrarClienteActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.cliente.CadastrarClienteActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".activities.produto.CadastrarProdutoActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar"
-                android:windowSoftInputMode="adjustPan" />
+            android:name=".activities.produto.CadastrarProdutoActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
         <activity
-                android:name=".activities.contaPagarReceber.compra_venda_produtos.RegistrarCompraVendaActivity"
-                android:screenOrientation="portrait"
-                android:windowSoftInputMode="adjustPan"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.contaPagarReceber.compra_venda_produtos.RegistrarCompraVendaActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
         <activity
-                android:name=".activities.contaPagarReceber.ListaContasPagarReceberActivity"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".activities.contaPagarReceber.ListaContasPagarReceberActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
-                android:name="androidx.core.content.FileProvider"
-                android:authorities="br.com.rm.cfv.fileprovider"
-                android:exported="false"
-                android:grantUriPermissions="true">
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="br.com.rm.cfv.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths" />
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
     </application>
 
