reports (cliente em atraso, saldo clientes, Produto em baixa, produto estoque)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.reports.ReportsActivity"></activity>
+
+        <activity android:name=".activities.reports.ReportsActivity"
+            android:label="@string/reports"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity
             android:name=".activities.receita.CadastrarReceitaDespesaActivity"
             android:label="@string/app_name"
