--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation("com.google.guava:guava:28.1-android")
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
-
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     // Required -- JUnit 4 framework
     implementation 'com.google.android.material:material:1.2.0'
