--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         applicationId "br.com.rm.cfv"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,22 +32,23 @@ android {
         sourceCompatibility = "1.8"
         targetCompatibility = "1.8"
     }
-    buildToolsVersion '30.0.3'
+    buildToolsVersion '31.0.0'
 }
 
 dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     def room_version = "2.3.0-alpha02"
+    def sdkLib = "31.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:30.0.0'
-    implementation 'com.android.support:design:30.0.0'
-    implementation 'com.android.support:cardview-v7:30.0.0'
+    implementation "com.android.support:appcompat-v7:$sdkLib"
+    implementation "com.android.support:design:$sdkLib"
+    implementation "com.android.support:cardview-v7:$sdkLib"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
-    implementation 'com.android.support:cardview-v7:30.0.0'
+    implementation "com.android.support:cardview-v7:$sdkLib"
     implementation("com.google.guava:guava:28.1-android")
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
@@ -57,7 +58,7 @@ dependencies {
     // Required -- JUnit 4 framework
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.12'
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.3.0'
